--- a/iters-web/src/main/resources/templates/page/emailRecycle.html
+++ b/iters-web/src/main/resources/templates/page/emailRecycle.html
@@ -15,29 +15,34 @@
     </style>
     <title>邮件管理</title>
 </head>
-<body onload="InboxInf()">
+<body onload="RecycleInf()">
 <div class="emal_left">
     <input type="text" id="id" style="display: none" value>
     <div class="email_top">
-        <a href="#" class="a_border"><i class="get_i"></i> 收信</a>
+        <a href="#" class="a_border" onclick="clickEmail()"><i class="get_i"></i> 收信</a>
         <a href="#" onclick="openlayer()"><i class="write_i"></i>写信</a>
     </div>
     <ul class="email_ul">
-        <li class="li_active">收件箱(<b id="inBoxSum"></b>)<span id="inBoxCount"></span></li>
-        <li>草稿箱<span>12</span></li>
-        <li>已发送<span>12</span></li>
-        <a href="emailRecycle" style="text-decoration:none;color: #0C0C0C"><li>回收站(<b id="recycleSum"></b>)<span id="recycleCount"></span></li></a>
+        <li style="display: none" class="li_active">收件箱(<b id="inBoxSum"></b>)<span id="inBoxCount"></span></li></a>
+        <li style="display: none">草稿箱<span>12</span></li>
+        <li style="display: none">已发送<span>12</span></li>
+        <li onclick="clickRecycle()">回收站(<b id="recycleSum"></b>)<span id="recycleCount"></span></li>
+        <li>
+        <b id="senderName"><font size="2"></font></b><br>
+        <b id="emailTitle"></b>.........<b id="sendTime"></b><br>
+        <b id="emailContent"></b>
+        </li>
     </ul>
 </div>
-<div class="emal_right">
-    <div  class="email_con" style="display: block">
+<div class="emal_right" id="show">
+    <div  class="email_con" >
         <div class="title"><h2>收件箱</h2></div>
         <div class="query">
             <div class="tabe_bot">
                 <div class="l_left"><label>邮件标题：</label><input type="text" id="emailTitles" placeholder="请输入邮件标题"></div>
                 <div class="l_left"><label>是否查看：</label><input id="isMsgs" placeholder="请输入是或者否" /></div>
                 <div class="l_left"><label>发送时间：</label><input id="sendTimes" placeholder="请输入发送时间" /></div>
-                <button class="tabe_btn " onclick="getEmailTableData()">查询</button>
+                <button class="tabe_btn">查询</button>
                 <div class="clear"></div>
             </div>
         </div>
@@ -104,25 +109,22 @@
         </div>
         <div class="pagination ue-clear"></div>
     </div>
-    <div  class="email_con">
+    <div  class="email_con" style="display: block">
         <div class="title"><h2>回收站</h2></div>
         <div class="query">
             <div class="tabe_bot">
-                <div class="l_left"><label>邮件标题：</label><input type="text" placeholder="请输入邮件名称"></div>
-                <div class="l_left"><label>是否查看：</label><select>
-                    <option>查看</option>
-                    <option>未查看</option>
-                </select></div>
-                <div class="l_left"><label>发送时间：</label><input id="demo03" placeholder="输入提交时间" /></div>
-                <button class="tabe_btn">查询</button>
+                <div class="l_left"><label>邮件标题：</label><input type="text" id="emailsTitles" placeholder="请输入邮件标题"></div>
+                <div class="l_left"><label>是否查看：</label><input id="issMsgs" placeholder="请输入是或者否" /></div>
+                <div class="l_left"><label>发送时间：</label><input id="sendsTimes" placeholder="请输入发送时间" /></div>
+                <button class="tabe_btn " onclick="getEmailRecycleTableData()">查询</button>
                 <div class="clear"></div>
             </div>
         </div>
         <div class="table-operate ue-clear">
-            <a href="#" class="sent01"  onclick="openlayer()">还原</a>
-            <a href="javascript:;" class="del">删除</a>
+            <!--<a href="#" class="sent01"  onclick="openlayer()">还原</a>
+            <a href="javascript:;" class="del">删除</a>-->
             <!--<a href="javascript:;" class="back">回息</a>-->
-            <a href="javascript:;" class="out">导出</a>
+            <a href="javascript:;" class="out" onclick="exportRecycleEmails()">导出</a>
         </div>
         <div class="table-box">
             <table id="table03" class="table_style"></table>
@@ -138,10 +140,30 @@
 <script src="statics/assets/js/date/js/laydate.js"></script>
 <script src="statics/assets/js/date/js/laydate.js"></script>
 <script src="statics/assets/js/layer_v2.1/layer/layer.js"></script>
-<script src="statics/assets/js/email.js"></script>
 <script src="statics/assets/js/emailRecycle.js"></script>
 <script>
-    $(function () {debugger;
+    function clickRecycle(){debugger;
+        alert("点击成功")
+        $.ajax({
+            type: "GET",
+            url: "email/emailsRecyclesInfmormations/",
+            dataType: "json",
+            success: function (result) {debugger;
+                if (result.code == 100) {debugger;
+                    console.log(result.data);
+                    $.each(result.data,function (index, value) {debugger;
+                        $("#senderName").html(result.data.senderName);
+                        $("#emailTitle").html(result.data.emailTitle);
+                        $("#sendTime").html(result.data.sendTime);
+                        $("#emailContent").html(result.data.emailContent);
+                    });
+                }
+            }
+        });
+    }
+</script>
+<script>
+    $(function () {
         $.ajax({
             type: "GET",
             url: "email/emailInBoxSumOrCount/",
@@ -156,6 +178,7 @@
                             $('#inBoxCount').html(value);
                         }
                     });
+                }else {
                 }
             }
         });
@@ -189,7 +212,7 @@
 <script>
     !function(){
         laydate.skin('molv');//切换皮肤，请查看skins下面皮肤库
-        laydate({elem: '#sendTimes',istime:true,format: 'YYYY-MM-DD hh:mm:ss'});//绑定元素
+        laydate({elem: '#sendsTimes',istime:true,format: 'YYYY-MM-DD hh:mm:ss'});//绑定元素
     }();
 </script>
 </html>
