--- a/iters-web/src/main/resources/templates/page/emailRecycle.html
+++ b/iters-web/src/main/resources/templates/page/emailRecycle.html
@@ -22,16 +22,19 @@
         <a href="#" class="a_border" onclick="clickEmail()"><i class="get_i"></i> 收信</a>
         <a href="#" onclick="openlayer()"><i class="write_i"></i>写信</a>
     </div>
-    <ul class="email_ul">
+    <ul class="email_ul" id="htmlEmail">
         <li style="display: none" class="li_active">收件箱(<b id="inBoxSum"></b>)<span id="inBoxCount"></span></li></a>
         <li style="display: none">草稿箱<span>12</span></li>
         <li style="display: none">已发送<span>12</span></li>
         <li onclick="clickRecycle()">回收站(<b id="recycleSum"></b>)<span id="recycleCount"></span></li>
         <li>
-        <b id="senderName"><font size="2"></font></b><br>
-        <b id="emailTitle"></b>.........<b id="sendTime"></b><br>
-        <b id="emailContent"></b>
+            <font size="3"><b id="sendersName" style="text-overflow:ellipsis"></b></font><br>
+            <font size="2"><b id="emailsTitle"></b></font>.........<font size="2"><b id="sendsTime"></b></font><br>
+            <font size="2"><b id="emailsContent"></b></font>
         </li>
+        <li>已发送<span>12</span></li>
+        <li>已发送<span>12</span></li>
+        <li>已发送<span>12</span></li>
     </ul>
 </div>
 <div class="emal_right" id="show">
@@ -148,16 +151,58 @@
             type: "GET",
             url: "email/emailsRecyclesInfmormations/",
             dataType: "json",
-            success: function (result) {debugger;
+            success: function (result) {
                 if (result.code == 100) {debugger;
-                    console.log(result.data);
                     $.each(result.data,function (index, value) {debugger;
-                        $("#senderName").html(result.data.senderName);
-                        $("#emailTitle").html(result.data.emailTitle);
-                        $("#sendTime").html(result.data.sendTime);
-                        $("#emailContent").html(result.data.emailContent);
+                        if (index%4==0){
+                            var htmlEmail="";
+                            $('#htmlEmail').append('<li>已发送<span>12</span></li>');
+                            htmlEmail+='<ul class="email_ul" id="htmlEmail">' +
+                                '<li>' +
+                                '<font size="3">eeffefef<b id="senderNames" style="text-overflow:ellipsis"></b></font><br>'+
+                                '<font size="2">effef<b id="emailTitle"></b></font>....<font size="2"><b id="sendTime">gerrg</b></font><br>'+
+                                '<font size="2">fegggggg<b id="emailContent"></b></font>'+
+                                ' </li>'+
+                                '</ul>'
+                            $('#htmlEmail').append(htmlEmail);
+                        }
+                        if(index==0||index%4==0){
+                            if(value.length<=9){
+                                $("#senderName").text(value);
+                            }else{
+                                var sendersNames = value.substring(0,9)+"......";
+                                $("#senderName").text(sendersNames)
+                            }
+                        }
+                        if(index==1||index%4==1) {
+                            if(value.length<=6){
+                                $("#emailTitle").text(value);
+                            }else{
+                                var emailTitles = value.substring(0,6)+"..........";
+                                $("#emailTitle").text(emailTitles)
+                            }
+                        }
+                        if(index==2||index%4==2) {
+                            if(value.length<=11){
+                                $("#sendTime").text(value);
+                            }else{
+                                var sendTimes = value.substring(0,11)+"..........";
+                                $("#sendTime").text(sendTimes)
+                            }
+                        }
+                        if(index==3||index%4==3) {
+                            if (value.length <=10) {
+                                $("#emailContent").text(value);
+                            } else {
+                                var emailContents = value.substring(0,10) + "..........";
+                                $("#emailContent").text(emailContents)
+                            }
+                        }
+
                     });
+
                 }
+
             }
         });
     }
